--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
        <div class="logo">
            <img src="/assets/logovegan4.png" alt="Foodfy Vegan">   
-           <a href="#">About</a>
-           <a href="#">Recipes</a>        
+           <a href="about.html">About</a>
+           <a href="recipes.html">Recipes</a>        
        </div>
        </header>
 
