--- a/recipes.html
+++ b/recipes.html
@@ -21,8 +21,15 @@
        </header>
 
     <main>
+        <div class="filter-btn">
+            <ul id="buttons">
+                <li class="active" data-target="all">All</li>
+                <li data-target="vegan">Vegan</li>
+                <li data-target="vegetarian">Vegetarian</li>
+            </ul>
+        </div>
         <section class="cards">         
-            <div class="card" id="1583427548973-3dc79cd09fd4">
+            <div class="card" data-id="vegetarian" id="1583427548973-3dc79cd09fd4">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1583427548973-3dc79cd09fd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Veggie Pizza">
                 </div>
@@ -33,7 +40,7 @@
                     <p>By Maria Bern</p>
                 </div>
             </div>
-            <div class="card" id="1551892269-860b1e482f98">
+            <div class="card" data-id="vegetarian" id="1551892269-860b1e482f98">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1551892269-860b1e482f98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Eggplant Lasagna">
                 </div>
@@ -44,7 +51,7 @@
                     <p>By Flora Flores</p>
                 </div>
             </div>
-            <div class="card" id="1546441471-c81f0586d0a9">
+            <div class="card" data-id="vegan"id="1546441471-c81f0586d0a9">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1546441471-c81f0586d0a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pea Burger">
                 </div>
@@ -55,7 +62,7 @@
                     <p>By Lila Olinda</p>
                 </div>
             </div>
-            <div class="card" id="1536096119648-4cbab718f351">
+            <div class="card" data-id="vegan" id="1536096119648-4cbab718f351">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1536096119648-4cbab718f351?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="Mushroom pasta">
                 </div>
@@ -66,7 +73,7 @@
                     <p>By Manuella Nadege</p>
                 </div>
             </div>
-            <div class="card" id="1561043433-aaf687c4cf04">
+            <div class="card" data-id="vegetarian" id="1561043433-aaf687c4cf04">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1561043433-aaf687c4cf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Green Salad">
                 </div>
@@ -77,7 +84,7 @@
                     <p>By Marina Lin</p>
                 </div>
             </div>
-            <div class="card" id="1543573852-1a71a6ce19bc">
+            <div class="card" data-id="vegan" id="1543573852-1a71a6ce19bc">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1543573852-1a71a6ce19bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Red Fruits Smooth">
                 </div>
@@ -88,7 +95,7 @@
                     <p>By Theo Lindo</p>
                 </div>
             </div>
-            <div class="card" id="1583427548973-3dc79cd09fd4">
+            <div class="card" data-id="vegetarian" id="1583427548973-3dc79cd09fd4">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1583427548973-3dc79cd09fd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Veggie Pizza">
                 </div>
@@ -99,7 +106,7 @@
                     <p>By Maria Bern</p>
                 </div>
             </div>
-            <div class="card" id="1551892269-860b1e482f98"> 
+            <div class="card" data-id="vegetarian" id="1551892269-860b1e482f98"> 
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1551892269-860b1e482f98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Eggplant Lasagna">
                 </div>
@@ -110,7 +117,7 @@
                     <p>By Flora Flores</p>
                 </div>
             </div>
-            <div class="card" id="1546441471-c81f0586d0a9">
+            <div class="card" data-id="vegan" id="1546441471-c81f0586d0a9">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1546441471-c81f0586d0a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pea Burger">
                 </div>
@@ -121,7 +128,7 @@
                     <p>By Lila Olinda</p>
                 </div>
             </div>
-            <div class="card" id="1536096119648-4cbab718f351">
+            <div class="card" data-id="vegan" id="1536096119648-4cbab718f351">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1536096119648-4cbab718f351?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="Mushroom pasta">
                 </div>
@@ -132,7 +139,7 @@
                     <p>By Manuella Nadege</p>
                 </div>
             </div>
-            <div class="card" id="1561043433-aaf687c4cf04">
+            <div class="card" data-id="vegetarian" id="1561043433-aaf687c4cf04">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1561043433-aaf687c4cf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Green Salad">
                 </div>
@@ -143,7 +150,7 @@
                     <p>By Marina Lin</p>
                 </div>
             </div>
-            <div class="card" id="1543573852-1a71a6ce19bc">
+            <div class="card" data-id="vegan" id="1543573852-1a71a6ce19bc">
                 <div class="img">
                     <img src="https://images.unsplash.com/photo-1543573852-1a71a6ce19bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Red Fruits Smooth">
                 </div>
