--- a/recipes.html
+++ b/recipes.html
@@ -13,10 +13,9 @@
 <body>
     <header>
        <div class="logo">
-           <img src="/assets/logovegan4.png" alt="Foodfy Vegan">   
-           <a href="about.html">About</a>
-           <a href="recipes.html">Recipes</a> 
-           <a href="index.html">Home</a>       
+            <a href="index.html"><img src="/assets/logovegan4.png" alt="Foodfy Vegan"></a>
+            <a href="about.html">About</a>
+            <a href="recipes.html">Recipes</a>         
        </div>
        </header>
 
